// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PositionWatchDetails when positionId is NOT available should render correctly 1`] = `
<div
  className="inbox_details__empty inbox_mobile"
>
  Please select an item to view
</div>
`;

exports[`PositionWatchDetails when positionId is available when position is NOT available should render correctly 1`] = `
<div
  className="inbox_details__empty inbox_mobile"
>
  Position is not currently being watched. Please make sure to add a watch.
</div>
`;

exports[`PositionWatchDetails when positionId is available when position is available should render correctly 1`] = `
<div
  className="inbox_details"
>
  <div
    className="inbox_details_header"
  >
    <div
      className="inbox_details_header__actions"
    >
      <button
        className="inbox_details_header__mobile_button"
        onClick={[Function]}
      >
        Back to List
      </button>
      <LinkWrapper
        linkText="View Applicants"
        to="/applicants/firstPositionId"
      />
    </div>
    <div
      className="inbox_details_header__content"
    >
      <div
        className="inbox_details_header__title"
      >
        first title
      </div>
      <div
        className="inbox_details_header__job_id"
      >
        Job Id: 
        first job id
      </div>
      <div
        className="inbox_details_header__location"
      >
        Location: 
        first location
      </div>
    </div>
  </div>
  <div
    className="inbox_details_content"
  >
    <Connect(PositionWatchEditWidget)
      positionId="firstPositionId"
    />
    <PositionDetailsContent
      position={
        Object {
          "content": Object {
            "description": "first description",
            "requirements": Array [
              "Skill 1",
              "Skill 2",
            ],
            "responsibilities": Array [
              "Responsibility 1",
              "Responsibility 2",
            ],
          },
          "jobId": "first job id",
          "location": "first location",
          "positionId": "firstPositionId",
          "title": "first title",
        }
      }
    />
  </div>
</div>
`;
